[package]
name = "ttrs"
version = "0.9.0"
edition = "2021"
authors = ["Steven E. Elliott <seeyallc6c@gmail.com>"]

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5.7"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error="0.1"

rand = "0.8"
futures-util = "0.3"

regex = "1"
chrono = { version = "0.4", features = ["serde"] }


# DEBUG AND LOGGING
log = "0.4"
env_logger = "*"

[dev-dependencies]
once_cell = "1"

[[bin]]
name = "example"
path = "src/main.rs"
test = true
required-features = []
